--- a/res/layout/help_layout.xml
+++ b/res/layout/help_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 
-	Open Manager, an open source file manager for the Android system
+    Open Manager, an open source file manager for the Android system
     Copyright (C) 2009, 2010  Joe Berria <nexesdevelopment@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
@@ -18,44 +18,44 @@
  -->
  
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
- 	android:orientation="vertical"
- 	android:layout_width="fill_parent"
- 	android:layout_height="fill_parent"
- 	android:background="@color/darkGray"
- 	android:padding="6dip">
- 	<ImageView
- 		android:src="@drawable/icon64"
- 		android:layout_width="wrap_content"
- 		android:layout_height="wrap_content"
- 		android:layout_gravity="center"
- 		android:paddingTop="10dip"/>
- 	<TextView
- 		android:id="@+id/help_top_label"
- 		android:layout_width="wrap_content"
- 		android:layout_height="wrap_content"
- 		android:layout_gravity="center"
- 		android:layout_weight="0"
- 		android:paddingTop="15dip"
- 		android:textColor="@color/white"/>
- 	<LinearLayout
- 		android:orientation="horizontal"
- 		android:layout_width="fill_parent"
- 		android:layout_height="fill_parent"
- 		android:layout_weight="4"
- 		android:background="@color/darkGray">
- 		<Button
-	 		android:id="@+id/help_email_bt"
-	 		android:layout_width="wrap_content"
-	 		android:layout_height="wrap_content"
-	 		android:layout_gravity="center"
-	 		android:layout_weight="1"
-	 		android:text="Email Developer"/>
-	 	<Button
-	 		android:id="@+id/help_website_bt"
-	 		android:layout_width="wrap_content"
-	 		android:layout_height="wrap_content"
-	 		android:layout_gravity="center"
-	 		android:layout_weight="1"
-	 		android:text="Website"/>	
- 	</LinearLayout>
+     android:orientation="vertical"
+     android:layout_width="fill_parent"
+     android:layout_height="fill_parent"
+     android:background="@color/darkGray"
+     android:padding="6dip">
+     <ImageView
+         android:src="@drawable/icon64"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:paddingTop="10dip"/>
+     <TextView
+         android:id="@+id/help_top_label"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:layout_weight="0"
+         android:paddingTop="15dip"
+         android:textColor="@color/white"/>
+     <LinearLayout
+         android:orientation="horizontal"
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
+         android:layout_weight="4"
+         android:background="@color/darkGray">
+         <Button
+             android:id="@+id/help_email_bt"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             android:layout_weight="1"
+             android:text="@string/email_dev"/>
+         <Button
+             android:id="@+id/help_website_bt"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             android:layout_weight="1"
+             android:text="@string/dev_website"/>
+     </LinearLayout>
  </LinearLayout>
