--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 
-	Open Manager, an open source file manager for the Android system
+    Open Manager, an open source file manager for the Android system
     Copyright (C) 2009, 2010, 2011  Joe Berria <nexesdevelopment@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
@@ -23,130 +23,130 @@
     android:layout_height="fill_parent"
     android:background="@color/offWhite">
     <TextView
-    	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:background="@color/offWhite"
-    	android:textColor="@color/black"
-    	android:id="@+id/storage_label" />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/offWhite"
+        android:textColor="@color/black"
+        android:id="@+id/storage_label" />
     <HorizontalScrollView
-    	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:scrollbars="none">
-    	<LinearLayout
-    		android:orientation="horizontal"
-    		android:layout_width="fill_parent"
-    		android:layout_height="wrap_content"
-    		android:background="@color/offWhite"
-    		android:gravity="center">
-    		<ImageButton
-    			android:layout_width="wrap_content"
-    			android:layout_height="wrap_content"
-    			android:padding="6dp"
-    			android:layout_marginRight="2dp"
-    			android:layout_marginTop="6dp"
-    			android:src="@drawable/back"
-    			android:id="@+id/back_button" />
-    		<ImageButton
-    			android:layout_width="wrap_content"
-    			android:layout_height="wrap_content"
-    			android:padding="6dp"
-    			android:layout_marginRight="2dp"
-    			android:layout_marginTop="6dp"
-    			android:src="@drawable/home"
-    			android:id="@+id/home_button"/>
-    		<ImageButton
-    			android:layout_width="wrap_content"
-    			android:layout_height="wrap_content"
-    			android:padding="6dp"
-    			android:layout_marginRight="2dp"
-    			android:layout_marginTop="6dp"
-    			android:src="@drawable/toolbox"
-    			android:id="@+id/manage_button"/>
-    		<ImageButton
-    			android:layout_width="wrap_content"
-    			android:layout_height="wrap_content"
-    			android:padding="6dp"
-    			android:layout_marginRight="2dp"
-    			android:layout_marginTop="6dp"
-    			android:src="@drawable/multiselect_38"
-    			android:id="@+id/multiselect_button"/>
-    		<ImageButton
-    			android:layout_width="wrap_content"
-    			android:layout_height="wrap_content"
-    			android:padding="6dp"
-    			android:layout_marginRight="2dp"
-    			android:layout_marginTop="6dp"
-    			android:src="@drawable/info"
-    			android:id="@+id/info_button"/>
-    		<ImageButton
-    			android:layout_width="wrap_content"
-    			android:layout_height="wrap_content"
-    			android:padding="6dp"
-    			android:layout_marginRight="2dp"
-    			android:layout_marginTop="6dp"
-    			android:src="@drawable/help"
-    			android:id="@+id/help_button"/>
-    	</LinearLayout>
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/offWhite"
+            android:gravity="center">
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/back"
+                android:id="@+id/back_button" />
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/home"
+                android:id="@+id/home_button"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/toolbox"
+                android:id="@+id/manage_button"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/multiselect_38"
+                android:id="@+id/multiselect_button"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/info"
+                android:id="@+id/info_button"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/help"
+                android:id="@+id/help_button"/>
+        </LinearLayout>
     </HorizontalScrollView>
-    	<TextView
-	    	android:id="@+id/path_label"
-	    	android:text="path is"
-	    	android:textColor="@color/white"
-	    	android:background="@color/black"
-	    	android:maxLines="1"
-	    	android:layout_width="fill_parent"
-	    	android:layout_height="wrap_content"
-	    	android:layout_weight="0"/>
-	    <TextView
-	    	android:id="@+id/detail_label"
-	    	android:textColor="@color/brightRed"
-	    	android:background="@color/black"
-	    	android:layout_width="fill_parent"
-	    	android:layout_height="wrap_content"
-	    	android:gravity="center"
-	    	android:layout_weight="0"/>
-    	<ListView
-    		android:layout_width="fill_parent"
-    		android:layout_height="fill_parent"
-    		android:layout_weight="2"
-    		android:drawSelectorOnTop="true"
-    		android:smoothScrollbar="true"
-    		android:longClickable="true"
-    		android:background="@color/black"
-    		android:id="@+id/android:list"/>
-    		
+        <TextView
+            android:id="@+id/path_label"
+            android:text="@string/path_desc"
+            android:textColor="@color/white"
+            android:background="@color/black"
+            android:maxLines="1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"/>
+        <TextView
+            android:id="@+id/detail_label"
+            android:textColor="@color/brightRed"
+            android:background="@color/black"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="0"/>
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="2"
+            android:drawSelectorOnTop="true"
+            android:smoothScrollbar="true"
+            android:longClickable="true"
+            android:background="@color/black"
+            android:id="@+id/android:list"/>
+
     <!--  Footer for Multi-select buttons -->
     <LinearLayout
-    	android:id="@+id/hidden_buttons"
-    	android:orientation="horizontal"
-    	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:background="@color/black"
-    	android:visibility="gone">    
-    	<Button
-    		android:id="@+id/hidden_attach"
-    		android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:layout_weight="1"
-    		android:text="Attach"/>
-    	<Button
-    		android:id="@+id/hidden_delete"
-    		android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:layout_weight="1"
-      		android:text="Delete"/>
-    	<Button
-    		android:id="@+id/hidden_copy"
-    		android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:layout_weight="1"
-    		android:text="Copy"/>
-    	<Button
-    		android:id="@+id/hidden_move"
-    		android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:layout_weight="1"
-    		android:text="Move" />
-    </LinearLayout>		
+        android:id="@+id/hidden_buttons"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:visibility="gone">
+        <Button
+            android:id="@+id/hidden_attach"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/attach"/>
+        <Button
+            android:id="@+id/hidden_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+              android:text="@string/delete"/>
+        <Button
+            android:id="@+id/hidden_copy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/copy"/>
+        <Button
+            android:id="@+id/hidden_move"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/move" />
+    </LinearLayout>
 </LinearLayout>
 
