--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!-- 
-	Open Manager, an open source file manager for the Android system
+    Open Manager, an open source file manager for the Android system
     Copyright (C) 2009, 2010  Joe Berria <nexesdevelopment@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
@@ -19,211 +19,211 @@
    -->
     
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:background="@color/black" >
-	<TableLayout
-		android:orientation="vertical"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:stretchColumns="*"
-		android:shrinkColumns="*" >
-		
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:textColor="@color/offWhite"
-			android:text="Display"
-			android:textStyle="bold"
-			android:background="@color/darkGray" />
-		<View
-			android:layout_width="fill_parent"
-			android:layout_height="5dip"
-			android:background="@color/black" />
-			
-		<TableRow>
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content">
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingLeft="3dip"
-					android:textSize="18sp"
-					android:textColor="@color/white"
-					android:textStyle="bold"
-					android:text="Text color" />
-				<TextView
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:singleLine="false"
-					android:paddingTop="3dip"
-					android:paddingLeft="8dip"
-					android:textColor="@color/offWhite"
-					android:text="Change the preferred text color" />
-			</LinearLayout>
-			<ImageButton
-				android:id="@+id/setting_text_color_button"
-				android:src="@drawable/more"
-				android:background="#ff000000"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				android:layout_gravity="right"
-				android:padding="3dp" />
-		</TableRow>
-			<View
-				android:layout_width="fill_parent"
-				android:layout_height="3dip"
-				android:background="@color/darkGray" />
-				
-		<TableRow>
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content" >
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingLeft="3dip"
-					android:textSize="18sp"
-					android:textColor="@color/white"
-					android:textStyle="bold"
-					android:text="Show hidden files/folders" />
-				<TextView
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:singleLine="false"
-					android:paddingTop="3dip"
-					android:paddingLeft="8dip"
-					android:textColor="@color/offWhite"
-					android:text="Display files and folders that begin with a (period)" />
-			</LinearLayout>
-			<CheckBox
-				android:id="@+id/setting_hidden_box"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="right"
-				android:padding="3dp"
-				android:checked="false" />
-		</TableRow>
-			<View
-				android:layout_width="fill_parent"
-				android:layout_height="3dip"
-				android:background="@color/darkGray" /> 
-				
-		<TableRow>
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content" >
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingLeft="3dip"
-					android:textSize="18sp"
-					android:textColor="@color/white"
-					android:textStyle="bold"
-					android:text="Show Image Preview" />
-				<TextView
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:singleLine="false"
-					android:paddingTop="3dip"
-					android:paddingLeft="8dip"
-					android:textColor="@color/offWhite"
-					android:text="Display a thumbnail for image files" />
-			</LinearLayout>
-			<CheckBox
-				android:id="@+id/setting_thumbnail_box"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="right"
-				android:padding="3dp"
-				android:checked="false" />
-		</TableRow>
-		<View
-			android:layout_width="fill_parent"
-			android:layout_height="3dip"
-			android:background="@color/darkGray" />
-			
-		<TableRow>
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content" >
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingLeft="3dip"
-					android:textSize="18sp"
-					android:textColor="@color/white"
-					android:textStyle="bold"
-					android:text="Show Storage Banner" />
-				<TextView
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:singleLine="false"
-					android:paddingTop="3dip"
-					android:paddingLeft="8dip"
-					android:textColor="@color/offWhite"
-					android:text="Display sdcard storage information" />
-			</LinearLayout>
-			<CheckBox
-				android:id="@+id/setting_storage_box"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="right"
-				android:padding="3dp"
-				android:checked="false" />
-		</TableRow>
-		
-		<View
-			android:layout_width="fill_parent"
-			android:layout_height="5dip"
-			android:background="@color/black" />
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:textColor="@color/offWhite"
-			android:textStyle="bold"
-			android:text="Sorting" 
-			android:background="@color/darkGray" />	
-		<View
-			android:layout_width="fill_parent"
-			android:layout_height="5dip"
-			android:background="@color/black" />
-			
-		<TableRow>
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_height="wrap_content"
-				android:layout_width="fill_parent" >
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingLeft="3dip"
-					android:textSize="18sp"
-					android:textColor="@color/white"
-					android:textStyle="bold"
-					android:text="Sorting type" />
-				<TextView
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:singleLine="false"
-					android:paddingTop="3dip"
-					android:paddingLeft="8dip"
-					android:textColor="@color/offWhite"
-					android:text="Choose how to sort files and folders" />
-			</LinearLayout>
-			<ImageButton
-				android:id="@+id/settings_sort_button"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				android:layout_gravity="right"
-				android:background="#ff000000"
-				android:src="@drawable/more" />			
-		</TableRow>
-		
-	</TableLayout>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/black" >
+    <TableLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:stretchColumns="*"
+        android:shrinkColumns="*" >
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/offWhite"
+            android:text="@string/display"
+            android:textStyle="bold"
+            android:background="@color/darkGray" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="5dip"
+            android:background="@color/black" />
+
+        <TableRow>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="3dip"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="@string/text_color" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="false"
+                    android:paddingTop="3dip"
+                    android:paddingLeft="8dip"
+                    android:textColor="@color/offWhite"
+                    android:text="@string/text_color_desc" />
+            </LinearLayout>
+            <ImageButton
+                android:id="@+id/setting_text_color_button"
+                android:src="@drawable/more"
+                android:background="#ff000000"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="right"
+                android:padding="3dp" />
+        </TableRow>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="3dip"
+                android:background="@color/darkGray" />
+
+        <TableRow>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="3dip"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="@string/hidden_files" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="false"
+                    android:paddingTop="3dip"
+                    android:paddingLeft="8dip"
+                    android:textColor="@color/offWhite"
+                    android:text="@string/hidden_files_desc" />
+            </LinearLayout>
+            <CheckBox
+                android:id="@+id/setting_hidden_box"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:padding="3dp"
+                android:checked="false" />
+        </TableRow>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="3dip"
+                android:background="@color/darkGray" />
+
+        <TableRow>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="3dip"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="@string/image_preview" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="false"
+                    android:paddingTop="3dip"
+                    android:paddingLeft="8dip"
+                    android:textColor="@color/offWhite"
+                    android:text="@string/image_preview_desc" />
+            </LinearLayout>
+            <CheckBox
+                android:id="@+id/setting_thumbnail_box"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:padding="3dp"
+                android:checked="false" />
+        </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="3dip"
+            android:background="@color/darkGray" />
+
+        <TableRow>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="3dip"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="@string/storage_banner" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="false"
+                    android:paddingTop="3dip"
+                    android:paddingLeft="8dip"
+                    android:textColor="@color/offWhite"
+                    android:text="@string/storage_banner_desc" />
+            </LinearLayout>
+            <CheckBox
+                android:id="@+id/setting_storage_box"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:padding="3dp"
+                android:checked="false" />
+        </TableRow>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="5dip"
+            android:background="@color/black" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/offWhite"
+            android:textStyle="bold"
+            android:text="@string/sorting"
+            android:background="@color/darkGray" />    
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="5dip"
+            android:background="@color/black" />
+
+        <TableRow>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="3dip"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="@string/sorting_type" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="false"
+                    android:paddingTop="3dip"
+                    android:paddingLeft="8dip"
+                    android:textColor="@color/offWhite"
+                    android:text="@string/sorting_desc" />
+            </LinearLayout>
+            <ImageButton
+                android:id="@+id/settings_sort_button"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="right"
+                android:background="#ff000000"
+                android:src="@drawable/more" />            
+        </TableRow>
+
+    </TableLayout>
 </ScrollView>
