--- a/res/layout/help_layout.xml
+++ b/res/layout/help_layout.xml
@@ -24,7 +24,7 @@
      android:background="@color/darkGray"
      android:padding="6dip">
      <ImageView
-         android:src="@drawable/icon64"
+         android:src="@drawable/icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
