SlimFileManager : Root functionalty
- Root Browsing
- Remount R/W / Delete
- Copying, Moving, Renaming (+minor tweaks)

Patchset 6: fixing RootTools' broken "mounted as" detection to fix remount issues with /system
Patchset 7: Don't reset on device rotation, minor Rename Dialog tweaks
Patchset 8: Allow paths with spaces
Patchset 9: Thumbnail creation fixes (more efficient/less memory, centercrop 52x52, fix some potential Exceptions)
Patchset 10: Killing more potential thumbnail exceptions

Change-Id: Ie035215d6e9c9de0cd247c0e7fc11a9af0144e2e

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -84,6 +84,14 @@
                 android:padding="6dp"
                 android:layout_marginRight="2dp"
                 android:layout_marginTop="6dp"
+                android:src="@drawable/stop_48"
+                android:id="@+id/remount_button"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="6dp"
                 android:src="@drawable/help"
                 android:id="@+id/help_button"/>
         </LinearLayout>
@@ -96,6 +104,14 @@
             android:maxLines="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0"/>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:textColor="@color/white"
+            android:maxLines="1"
+            android:id="@+id/remount_label"
             android:layout_weight="0"/>
         <TextView
             android:id="@+id/detail_label"
