--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- 
+<!--
     Open Manager, an open source file manager for the Android system
     Copyright (C) 2009, 2010  Joe Berria <nexesdevelopment@gmail.com>
 
@@ -15,9 +15,9 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
-    
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -187,8 +187,55 @@
             android:layout_height="wrap_content"
             android:textColor="@color/offWhite"
             android:textStyle="bold"
+            android:text="@string/mode"
+            android:background="@color/darkGray" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="5dip"
+            android:background="@color/black" />
+
+        <TableRow>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="3dip"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="@string/mode_root" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="false"
+                    android:paddingTop="3dip"
+                    android:paddingLeft="8dip"
+                    android:textColor="@color/offWhite"
+                    android:text="@string/mode_root_desc" />
+            </LinearLayout>
+            <CheckBox
+                android:id="@+id/setting_root_box"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:padding="3dp"
+                android:checked="false" />
+        </TableRow>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="5dip"
+            android:background="@color/black" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/offWhite"
+            android:textStyle="bold"
             android:text="@string/sorting"
-            android:background="@color/darkGray" />    
+            android:background="@color/darkGray" />
         <View
             android:layout_width="fill_parent"
             android:layout_height="5dip"
@@ -222,7 +269,7 @@
                 android:layout_height="fill_parent"
                 android:layout_gravity="right"
                 android:background="#ff000000"
-                android:src="@drawable/more" />            
+                android:src="@drawable/more" />
         </TableRow>
 
     </TableLayout>
