--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -6,19 +6,23 @@
         <item name="1">@string/type</item>
         <item name="2">@string/size1</item>
     </string-array>
-    <string-array name="sortvalues">
+
+    <string-array name="sortvalues" translatable="false">
         <item name="0">0</item>
         <item name="1">1</item>
         <item name="2">2</item>
     </string-array>
+
     <string-array name="viewentries">
         <item name="0">@string/simple</item>
         <item name="1">@string/detailed</item>
     </string-array>
-    <string-array name="viewvalues">
+
+    <string-array name="viewvalues" translatable="false">
         <item name="0">0</item>
         <item name="1">1</item>
     </string-array>
+
     <string-array name="drawerTitles_array">
         <item>@string/dir_info</item>
         <item>@string/appmanager</item>
