TRDS: Dark Slim File Manager
Change-Id: Iaf4e3a320dd49b4e77098fafce2d6de4a48f4ba6

--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light"></style>
+	
+	<style name="AppBaseTheme1" parent="android:Theme.Holo.Light.Dialog"></style>
 
 </resources>
