--- a/app/src/main/res/layout/item_drawer.xml
+++ b/app/src/main/res/layout/item_drawer.xml
@@ -1,9 +1,28 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/title"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:layout_centerVertical="true"
     android:gravity="center_vertical"
     android:padding="6dp"
     android:textSize="17sp"
-    android:textColor="?android:textColorPrimary" />
+    android:textColor="?android:textColorPrimary">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:textSize="17sp"
+        android:layout_gravity="center"
+        android:padding="6dp"
+        android:textColor="?android:textColorPrimary"
+        android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/add_tab"
+        android:src="@drawable/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
