--- a/app/src/main/res/layout/file_manager.xml
+++ b/app/src/main/res/layout/file_manager.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.slim.slimfilemanager.widget.CustomDrawerLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
@@ -67,4 +67,4 @@
         android:background="?android:attr/windowBackground"
         android:clickable="true" />
 
-</com.slim.slimfilemanager.widget.CustomDrawerLayout>
+</android.support.v4.widget.DrawerLayout>
