Add text editor preferences

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,4 +18,15 @@
         <attr name="textAppearanceDialogInfo" format="reference"/>
     </declare-styleable>
 
+    <declare-styleable name="NumberPickerPreference">
+        <attr name="maxExternal" format="string" />
+        <attr name="minExternal" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="Preference">
+        <attr name="max" format="integer"/>
+        <attr name="min" format="integer" />
+        <attr name="defaultValue" format="string|boolean|integer|reference|float" />
+    </declare-styleable>
+
 </resources>
