--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="tabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
     </style>
 
     <style name="menu_labels_style">
@@ -16,12 +16,13 @@
         <item name="android:paddingRight">22dip</item>
         <item name="android:paddingTop">12dp</item>
         <item name="android:paddingBottom">12dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.TabPageIndicator</item>
+        <item name="android:actionBarTabTextStyle">@style/TextAppearance.TabPageIndicator</item>
         <item name="android:textSize">12sp</item>
         <item name="android:maxLines">1</item>
     </style>
 
-    <style name="TextAppearance.TabPageIndicator" parent="android:TextAppearance">
+    <style name="TextAppearance.TabPageIndicator" parent="android:TextAppearance.Medium">
+        <item name="android:typeface">monospace</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
