--- a/SlimFileManager/src/main/res/layout/activity_home.xml
+++ b/SlimFileManager/src/main/res/layout/activity_home.xml
@@ -19,34 +19,11 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<com.slim.turboeditor.views.CustomDrawerLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@id/drawer_layout"
+    android:id="@+id/text_editor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="@dimen/text_size_mega_title"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/open_a_file"
-        android:background="@null"
-        android:textColor="@android:color/secondary_text_dark"
-        android:id="@id/no_file_opened_messagge"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@id/text_editor"
-            android:visibility="gone">
 
             <com.slim.turboeditor.views.GoodScrollView
                 android:layout_width="match_parent"
@@ -99,19 +76,4 @@
                 android:layout_marginEnd="90dp"
                 android:visibility="invisible"/>
 
-        <HorizontalScrollView
-            android:layout_height="50dp"
-            android:layout_width="match_parent"
-            android:scrollbars="horizontal"
-            android:layout_gravity="bottom"
-            android:fillViewport="false"
-            android:id="@+id/parent_accessory_view">
-            <com.slim.turboeditor.util.AccessoryView
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/accessoryView"/>
-        </HorizontalScrollView>
-        </FrameLayout>
-    </LinearLayout>
-
-</com.slim.turboeditor.views.CustomDrawerLayout>
+</FrameLayout>
