--- a/SlimFileManager/src/main/res/values/styles.xml
+++ b/SlimFileManager/src/main/res/values/styles.xml
@@ -1,7 +1,29 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorAccent">@color/accent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:textColorPrimaryInverse">@color/primary_light</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="actionModeBackground">?colorPrimary</item>
+        <item name="iconColor">@color/icons</item>
+        <item name="drawerArrowStyle">@style/ArrowStyle</item>
+    </style>
+
+    <style name="ArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.Dark" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/accent_dark</item>
+        <item name="colorPrimary">@color/primary_dark</item>
+        <item name="colorPrimaryDark">@color/primary_darker</item>
+        <item name="actionModeBackground">?colorPrimary</item>
+        <item name="iconColor">@color/icons_dark</item>
+        <item name="drawerArrowStyle">@style/ArrowStyle</item>
         <item name="tabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
     </style>
 
