Add notification when pasting files. Some other updates
Change-Id: I200583f65b779954b0f25ec0ec65113b1512bea2

--- a/SlimFileManager/src/main/res/layout/file_manager.xml
+++ b/SlimFileManager/src/main/res/layout/file_manager.xml
@@ -51,7 +51,9 @@
             android:layout_alignParentEnd="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            app:fab_addButtonColorNormal="@color/accent"
+            app:fab_addButtonColorPressed="@color/accent_dark"/>
 
     </RelativeLayout>
 
